--- a/Advanced_Tools_Defold/game.project
+++ b/Advanced_Tools_Defold/game.project
@@ -1,5 +1,5 @@
 [bootstrap]
-main_collection = /scenes/3D_physics_test.collectionc
+main_collection = /scenes/2D_physics_test.collectionc
 render = /builtins/render/default.renderc
 
 [script]
@@ -10,6 +10,7 @@ width = 960
 height = 640
 high_dpi = 1
 display_profiles = /builtins/render/default.display_profilesc
+vsync = 0
 
 [android]
 input_method = HiddenInputField
@@ -23,7 +24,7 @@ dependencies#0 = https://github.com/britzl/defold-metrics/archive/master.zip
 
 [physics]
 max_collision_object_count = 8092
-type = 3D
+type = 2D
 max_contacts = 1000000
 max_collisions = 1000000
 
@@ -35,4 +36,7 @@ max_instances = 8092
 
 [graphics]
 max_draw_calls = 8092
+
+[sprite]
+max_count = 8092
 
