Added data collection into .csv file Defold

--- a/Advanced_Tools_Defold/game.project
+++ b/Advanced_Tools_Defold/game.project
@@ -1,5 +1,5 @@
 [bootstrap]
-main_collection = /scenes/moving_sprites.collectionc
+main_collection = /scenes/2D_physics_test.collectionc
 render = /builtins/render/default.renderc
 
 [script]
