Added scene management Defold
3D scene not added to scene management because it uses the other physics engine and is incompatible with the 2D physics scene

--- a/Advanced_Tools_Defold/game.project
+++ b/Advanced_Tools_Defold/game.project
@@ -1,5 +1,5 @@
 [bootstrap]
-main_collection = /scenes/2D_physics_test.collectionc
+main_collection = /scenes/scene_manager/scene_manager.collectionc
 render = /builtins/render/default.renderc
 
 [script]
