--- a/Advanced_Tools_Defold/game.project
+++ b/Advanced_Tools_Defold/game.project
@@ -1,5 +1,5 @@
 [bootstrap]
-main_collection = /scenes/scene_manager/scene_manager.collectionc
+main_collection = /scenes/3D_physics_test.collectionc
 render = /builtins/render/default.renderc
 
 [script]
@@ -24,7 +24,7 @@ dependencies#0 = https://github.com/britzl/defold-metrics/archive/master.zip
 
 [physics]
 max_collision_object_count = 8092
-type = 2D
+type = 3D
 max_contacts = 1000000
 max_collisions = 1000000
 
