--- a/Advanced_Tools_Defold/game.project
+++ b/Advanced_Tools_Defold/game.project
@@ -1,5 +1,5 @@
 [bootstrap]
-main_collection = /scenes/3D_physics_test.collectionc
+main_collection = /scenes/scene_manager/scene_manager.collectionc
 render = /builtins/render/default.renderc
 
 [script]
@@ -24,15 +24,15 @@ dependencies#0 = https://github.com/britzl/defold-metrics/archive/master.zip
 
 [physics]
 max_collision_object_count = 8092
-type = 3D
-max_contacts = 1000000
-max_collisions = 1000000
+type = 2D
+max_contacts = 1
+max_collisions = 1
 
 [model]
 max_count = 8092
 
 [collection]
-max_instances = 30000
+max_instances = 15000
 
 [graphics]
 max_draw_calls = 8092
